# maty_client

./: CMakeLists.txt
data/db/: data.db
lib/crypt/: aes.c  aes.h  sha2.c  sha2.h
res/: qml.qrc
res/qml/: ActionsMenu.qml  CardDlg.qml  ConfirmDlg.qml  ContactInfoDlg.qml  ContactsView.qml  HistoryView.qml  ImageDlg.qml  LabelButton.qml  LoginForm.qml  MessageView.qml  PanelButton.qml  RegForm.qml  RoundedImage.qml  common.js  main.qml  theme.js
src/: common.cpp  common.h  contacts.cpp  contacts.h  contactsmodel.cpp  contactsmodel.h  crypt.cpp  crypt.h  database.cpp  database.h  dispatcher.cpp  dispatcher.h  history.cpp  history.h  historymodel.cpp  historymodel.h  image.cpp  image.h  log.cpp  main.cpp  message.cpp  message.h  searchmodel.cpp  searchmodel.h  settings.cpp  settings.h  socket.cpp  socket.h
